* CHANGE: Refactor default.aspx and move all page specific behavior to WidgetPage.ascx

Version 2.6.2
=============
FIX: Issue-100: UserSetting.CurrentPageID now has foreign key to Page object
FIX: Issue 99:	Unique page titles create UI issues
FIX: Issue 98:	Lock widget instance > widget header is not fully disabled
FIX: Issue 97:	Add tab, add widget: error 'sequence contains no elements'

Version 2.6.1
==============
FIX: Fixed the logic where widgets on a column is pushed down when an widget is dropped on a column.
FIX: Performance problem on DropthingsDataContext2 where in the constructor it tries to initialize all the Entity sets with MergeOption = NoTracking. It makes the ObjectContext to initialize all the entity sets and thus causing high CPU. Solved it by making Query<> function to execute the compiled queries using NoTracking. 
CHANGE: Create Facade and register in Container only once per request and reuse that same instance within the request. This reuses ObjectContext and all repository instances.

Version 2.6
===========
ADD: Both VS 2008 and VS 2010 Solution files.
CHANGE: Linq to SQL to Entity Framework and Linq to Entities. New project: Dropthings.Data
CHANGE: Data Access unit tests changed to test new.
CHANGE: Remove all Subsystem stuff. Make the repository calls simpler.
ADD: Dropthings.Facade.Test which now has complete integration test to test facade operations. 
REMOVE: Linq to SQL based entities, Data Access Layer.

Version 2.5.6
=============
FIX: Fast RSS Widget was not saving the settings properly
FIX: Poor performance due to missing indexes and complex Linq to SQL queries resulting in no caching of critical data
ADD: DeveloperMode implementation. It will prevent script combining and CSS combining. But script defer still defers script loading.
CHANGE: Replace Unity container with Munq. Unity turned out to be CPU hoq.
CHANGE: All repositories now produce detached object in CRUD operations. All entities now have .Detach()

Version 2.5.5